# llm-mcp-plugin

./: .pre-commit-config.yaml  README.md  STDERR_HANDLING.md  main.py  notion_example.py  pyproject.toml  simple_stderr_test.py  test_stderr_handling.py
.github/workflows/: ci.yml  test.yml
examples/: sample_config.json  stderr_handling_example.json  toggl_example.py
llm_mcp_plugin/: __init__.py  config.py  mcp_client.py  mcp_toolbox.py  plugin.py
tests/: __init__.py  test_config.py
